Change margin-top to padding-top to fix margin collapsing

--- a/packages/cra-template-mephisto-review/template/src/Index.css
+++ b/packages/cra-template-mephisto-review/template/src/Index.css
@@ -48,7 +48,7 @@ code {
   align-items: center;
   text-align: center;
   font-size: calc(10px + 1vmin);
-  margin-top: 50px;
+  padding-top: 50px;
   width: 100vw;
   height: calc(100vh - 50px);
   overflow: auto;
